# variant-nowcast-hub

./: .gitignore  CLADETIME_UPSTREAM_FIX_CHANGELOG.md  README.md
.github/: CODEOWNERS  dependabot.yml
data-pipeline/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
data-pipeline/requirements/: dev-requirements.txt  requirements-dev.txt  requirements.txt
data-pipeline/src/covid_variant_pipeline/: __init__.py  assign_clades.py
data-pipeline/src/covid_variant_pipeline/data/: readme.txt  reference.json
data-pipeline/src/covid_variant_pipeline/data/20240529T155019/: 2024-05-24_clade_assignments.csv
data-pipeline/src/covid_variant_pipeline/data/assignment/: README.md
data-pipeline/src/covid_variant_pipeline/data/example-outputs/: readme.txt  reference_tree-lXbwzM1oPzrvX.2RliJ245pvkjEZCIFA.json
data-pipeline/src/covid_variant_pipeline/data/example-outputs/ncbi_dataset/data/: dataset_catalog.json  genomic.fna  virus_dataset.md
data-pipeline/src/covid_variant_pipeline/data/reference/: README.txt
data-pipeline/src/covid_variant_pipeline/util/: config.py  logs.py  reference.py  reference_tree.py  sequence.py  session.py
data-pipeline/src/tests/unit/util/: test_reference.py
data-pipeline/tests/integration/: test_assign_clades.py
data-pipeline/tests/unit/util/: test_reference.py  test_sequence.py
hub-config/: README.md  admin.json  make_round_config.R  model-metadata-schema.json  sample-file-creation.py  tasks.json  validations.yml
model-metadata/: CADPH-CATaLog.yml  CADPH-CATaMaran.yml  CovTransformer-LANL.yml  Hub-baseline.yml  Hub-ensemble.yml  LANL-CovTransformer.yml  README.md  UGA-multicast.yml  UMass-CCHMLR.yml  UMass-HMLR.yml  UMass-PyHMLR.yml  Variant_hub-baseline.yml  blab-gisaid_hier_mlr.yml  blab-open_hier_mlr.yml  sample-model.yml  ugatest-compound_taskid.yml  umasstest-compound_taskid.yml
model-output/: 2024-10-02-umass-validtestsubmission.parquet  Correct-sample-submission  README.md
src/: .lintr  .ruff.toml  README.md  R_PACKAGE_AND_SCRIPT_GUIDE.md  compute_coverage_script.R  create_round.sh  ensemble_model.R  get_clades_to_model.py  get_location_date_counts.py  get_location_date_counts_eval.py  get_target_data.py  make_round_config.R  model_output_summary.R  model_scoring_functions.R  plot-one-file.R  plot_one_location_clades.R  plot_summary_graphs.R  plot_validation_data.R  requirements.txt  sample-file-creation.py  sample_get_target_data.py  sample_submission_data.R  score_nowcasts_script.R  sim_model_output.R  (+4 more)
(+2120 files in other folders)
