[project]
name = "covid-variant-pipeline"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Becky Sweger", email = "rsweger@umass.edu"},
]

requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "awscli>=1.32.92",
    "cloudpathlib",
    "pandas>=2.2.2",
    "polars>=0.20.23",
    "requests",
    "structlog",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "rich",
]

[project.entry-points.'console_scripts']
assign_clades = 'covid_variant_pipeline.assign_clades:main'

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[tool.ruff]
line-length = 120
lint.extend-select = ['I']
