[project]
name = "covid-variant-pipeline"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Becky Sweger", email = "rsweger@umass.edu"},
]

requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "awscli>=1.32.92",
    "click",
    "cloudpathlib",
    "pandas",
    "polars>=0.20.23",
    "pyarrow",
    "requests",
    "rich",
    "rich-click",
    "structlog",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.entry-points."console_scripts"]
assign_clades = "covid_variant_pipeline.assign_clades:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
tmp_path_retention_policy = "none"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]
